syntax = "proto3";

package ibc.core.wasm.v1;

option go_package = "github.com/cosmos/ibc-go/v5/modules/core/28-wasm/types";

import "gogoproto/gogo.proto";

// GenesisState defines the ibc module's genesis state.
message GenesisState {
    repeated WasmLightClient wasm_light_clients = 1;
}

message WasmLightClient {
    string name       = 1;
    string repository = 2;
    bytes  code_hash  = 3;
    bytes  code       = 4;
}
